--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
 <author_id>:
-  name: Liam Drowley
-  twitter: lkd_analytics
-  url: lkd-analytics.github.io
+  name: <Liam Drowley>
+  twitter: <lkd_analytics>
+  url: <lkd-analytics.github.io>
